manifests/ctfd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd
  template:
    metadata:
      labels:
        app: ctfd
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
      - name: ctfd
        image: ghcr.io/kristi-balla/my-plugin:main
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "500m"
