manifests/ctfd-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ctfd
spec:
  selector:
    app: ctfd
  ports:
  - port: 8080
    targetPort: 8000
