manifests/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  annotations:
    cert-manager.io/issuer: ca-issuer
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    cert-manager.io/subject-organizations: "Spontan CTFd Interview Prep"
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.spontan.localhost"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: spontan-localhost-tls
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.spontan.localhost"
      allowedRoutes:
        namespaces:
          from: All
